[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mooncrescent"
version = "0.2.0"
description = "Terminal UI for Moonraker/Klipper 3D Printers"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Mooncrescent Contributors"}
]
keywords = ["3d-printing", "klipper", "moonraker", "tui", "terminal", "curses"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Printing",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.8"
dependencies = [
    "websocket-client>=1.6.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/j3k0/mooncrescent"
Repository = "https://github.com/j3k0/mooncrescent.git"
Issues = "https://github.com/j3k0/mooncrescent/issues"

[project.scripts]
mooncrescent = "mooncrescent.mooncrescent:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mooncrescent*"]
exclude = ["tests*"]

